# hackathon-mpit-kitwit

./: README.md
src/back/: .env  .gitignore  __main__.py  config_reader.py  pyproject.toml
src/back/api/: __init__.py  adverts.py  chats.py  common.py  users.py  utils.py
src/back/bot/handlers/: __init__.py  common.py
src/back/bot/keyboards/: builders.py
src/back/db/: __init__.py
src/back/db/models/: adverts.py  chat.py  user.py
src/front/: css.d.ts  package-lock.json  package.json  vite.config.ts
src/front/src/: App.tsx  index.css
src/front/src/components/: ChatTab.tsx  CreateEditListingModal.tsx  DealsTab.tsx  ListingsTab.tsx  ProfileTab.tsx
src/front/src/components/ui/: calendar.tsx
src/front/src/hooks/: useChat.ts  useUser.ts
src/front/src/interface/: Chat.ts  IUser.ts  Listings.ts
src/front/src/utils/: api.ts  chatApi.ts
